# KapiBara_ROS2_Robot

./: .gitignore  .gitmodules  README.md  aux_services.yaml  build_compose.yml  cmd.txt  compose.yml  compose_sim.yml  compose_sim_amd.yml  compose_sim_nvidia.yml  encoders.csv  mag_xy  mag_zx  mag_zy  run.sh  sim.sh
.github/workflows/: main.yml
robot/: Dockerfile  Dockerfile.prod  Dockerfile.sim  entrypoint.sh  entrypoint_sim.sh  run.sh  run_sim.sh
robot/addons/: install.sh
robot/commands/: build_package.sh  build_packages.sh  create_package.sh  create_workspace.sh  run_cmd.sh  update.sh
robot/dependencies/: gazebo.txt  packages.txt
robot/env/: env  sim
robot/src/: atlas.osa  cycloneddns.xml  face.db  face.db_scores.json  mind_database.db-journal  screenshot-1766441883.cam  screenshot-1766441884.cam  screenshot-1766441885.cam
robot/src/cfg/: fusion.json  imu.json  mqtt_config.yaml  pid.json
robot/src/launch/: launch.py
robot/src/rviz/: kapibara2.rviz  kapibara_slam.rviz  main.py  small_house.world
robot/src/rviz/models/aws_robomaker_residential_FloorB_01/: model.sdf
robot/src/workspace/: atlas.osa
robot/src/workspace/src/emotion_estimer/: dependencies.txt
robot/src/workspace/src/fast_kapibara_interface/: CMakeLists.txt  package.xml
robot/src/workspace/src/image_spotter/: CMakeLists.txt  dependencies.txt  package.xml
robot/src/workspace/src/tb6612_drive/: CMakeLists.txt  package.xml  tb6612.xml
robot/src/workspace/src/tb6612_drive/include/tb6612_drive/: gpio_interface.hpp  pwm_interface.hpp  tb6612_drive.hpp  wheel.hpp
robot/src/workspace/src/tb6612_drive/src/: gpio_interface.cpp  pwm_interface.cpp  tb6612_drive.cpp
(+104 files in other folders)
